--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 
 <title>SAN TECH </title>
 <link rel="icon" type="image/png" href="images/logo.png" />
-<meta name="description" content= " At SAN TECH LTD we deliver cutting edge business improvement softwares to our customer globally, our solutions are scalable and extensible as our customer grow in their business. We are one amongst the Top Web Application and Mobile Application Companies in India with Offices in Bangalore, Mumbai & USA." />
+<meta name="description" content= " At SAN TECH LTD we deliver cutting edge business improvement softwares to our customer globally, our solutions are scalable and extensible as our customer grow in their business. We are one amongst the Top Web Application and Mobile Application Companies" />
 
 <meta name="keywords" content= "distribution management softwares, outsourced software projects, enterprise portal development, web application development, mobile application development, desktop application development, cloud Computing, application re-engineering, application support and maintenance, application migration, application integration, office intranet software, crm software, secondary sales software, ecommerce solutions, loyalty software" />
 
@@ -1088,7 +1088,7 @@ $(document).ready(function(e) {
     <footer>
     <div id="mobil-footer" style="display:none;">
 	     <h2>Keep in Touch</h2>
-		 <a class="call-maile" href="tel:+919845141928"><i class="fa fa-phone" aria-hidden="true"></i>+91-98451-41928</a>
+		 <a class="call-maile" href="tel: +250783250033"><i class="fa fa-phone" aria-hidden="true"></i> +250783250033</a>
 		 <a class="call-maile" href="mailto:info@arokiait.com" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i>
 info@arokiait.com</a>
 		 <div class="footer-menu-social"><h2>Socialise With Us</h2><br>
@@ -1099,7 +1099,7 @@ info@arokiait.com</a>
                   <a href="https://www.youtube.com/user/arokiait" class="footer-menu-social-link" title="Follow us on YouTube" target="_blank"><img src="images/vimeo.png"></a>
                   <a href="http://blog.arokiait.com/" class="footer-menu-social-link" title="Follow us on Blog" target="_blank"><img src="images/blog.png"></a>
          </div>
-		 <p style="padding: 7px 0px;font-size: 16px;color: #fff;">&nbsp;&nbsp;© 2014, SANT TECH Ltd Pvt Limited. All rights reserved.</p>	 
+		 <p style="padding: 7px 0px;font-size: 16px;color: #fff;">&nbsp;&nbsp;© 2020, SANT TECH Ltd Limited. All rights reserved.</p>	 
 	
 	</div>
     </footer>
