--- a/index.htm
+++ b/index.htm
@@ -980,6 +980,7 @@ $(document).ready(function(e) {
                                 </div>
                                 <!-- End Item -->
                             </div>
+                            <strong></strong>
                             <!-- End Carousel Inner 
                             <div class="controls">
                                 <ul class="nav">
