--- a/index.htm
+++ b/index.htm
@@ -980,7 +980,7 @@ $(document).ready(function(e) {
                                 </div>
                                 <!-- End Item -->
                             </div>
-                            <strong></strong>
+                            
                             <!-- End Carousel Inner 
                             <div class="controls">
                                 <ul class="nav">
@@ -1089,9 +1089,9 @@ $(document).ready(function(e) {
     <footer>
     <div id="mobil-footer" style="display:none;">
 	     <h2>Keep in Touch</h2>
-		 <a class="call-maile" href="tel: +250783250033"><i class="fa fa-phone" aria-hidden="true"></i> +250783250033</a>
-		 <a class="call-maile" href="mailto:info@arokiait.com" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i>
-info@arokiait.com</a>
+		 <a class="call-maile" href="tel:  +250783250033"><i class="fa fa-phone" aria-hidden="true"></i>  +250783250033</a>
+		 <a class="call-maile" href="mailto:santechrw@gmail.com" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i>
+            santechrw@gmail.com</a>
 		 <div class="footer-menu-social"><h2>Socialise With Us</h2><br>
                   <a href="https://www.facebook.com/ArokiaITPvtLtd" class="footer-menu-social-linkfirst" title="Follow us on Facebook" target="_blank"><img src="images/facebook.png"></a>
                   <a href="https://twitter.com/arokiaitpvtltd" class="footer-menu-social-link" title="Follow us on Twitter" target="_blank"><img src="images/twitter.png"></a>
