--- a/index.htm
+++ b/index.htm
@@ -908,7 +908,7 @@ $(document).ready(function(e) {
         	<div class="row">
             	<div class="col-xs-12">
                 	<h2 class="text-center">About San tech Ltd Ltd</h2>
-                    <h4 class="text-center">Strategic insights at Arokia</h4>
+                    <h4 class="text-center">Strategic insights at san tech</h4>
                     <p class="text-center">SAN TECH LTD is the company started in August 2019 and has get certificate on 01, August 2019 with TIN number: 109014654 and it is located in Kigali,Rwanda,Nyabugogo-Muhima Road,Nyarugenge District ,11 KN 89 St,1st floor,Maison Voisin Building ,Opposite of King sports ltd The core project of SAN TECH LTD is E-VISITORS SYSTEM.</p>
                     <p class="text-center">SAN TECH LTD is the company started in August 2019 and has get certificate on 01, August 2019 with TIN number: 109014654 and it is located in Kigali,Rwanda,Nyabugogo-Muhima Road,Nyarugenge District ,11 KN 89 St,1st floor,Maison Voisin Building ,Opposite of King sports ltd The core project of SAN TECH LTD is E-VISITORS SYSTEM
 						<br><br><a href="about-us.htm" class="btn btn-default">read more</a>
