--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,7 @@
 
 <meta name="keywords" content= "distribution management softwares, outsourced software projects, enterprise portal development, web application development, mobile application development, desktop application development, cloud Computing, application re-engineering, application support and maintenance, application migration, application integration, office intranet software, crm software, secondary sales software, ecommerce solutions, loyalty software" />
 
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <link href="css/style.css" rel="stylesheet" type="text/css">
 <link href="css/common.css" rel="stylesheet" type="text/css">
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -37,7 +38,7 @@
       xmlhttp.onreadystatechange=function() {
         if (this.readyState==4 && this.status==200) {
           document.getElementById("livesearch").innerHTML=this.responseText;
-          document.getElementById("livesearch").style.border="1px solid #A5ACB2";
+          document.getElementById("livesearch").style.border="1px solid #015077";
         }
       }
       xmlhttp.open("GET","livesearch.php?q="+str,true);
@@ -196,7 +197,7 @@ $(document).ready(function(e) {
 
 
 <div id="main-container" class=" hidden-sm hidden-xs">
-    <header style="width:100%; background: #006699;padding: 5px;"> &nbsp;&nbsp; Vision <div style="float: right;margin-right: 5px;"> Values</div>
+    <header style="width:100%; background:#015077;padding: 5px;"> &nbsp;&nbsp; Vision <div style="float: right;margin-right: 5px;"> Values</div>
     </header>
     <div class="wrap" style="background: white;color: #000000;">
         <br><br>
