--- a/index.htm
+++ b/index.htm
@@ -197,9 +197,9 @@ $(document).ready(function(e) {
 
 
 <div id="main-container" class=" hidden-sm hidden-xs">
-    <header style="width:100%; background:#015077;padding: 5px;"> &nbsp;&nbsp; Vision <div style="float: right;margin-right: 5px;"> Values</div>
+    <header style="width:100%; background:#015077;padding: 5px;" class="header"> &nbsp;&nbsp; Vision <div style="float: right;margin-right: 5px;"> Values</div>
     </header>
-    <div class="wrap" style="background: white;color: #000000;">
+    <div class="wrap" style="background: white;color: #000000;" id="header">
         <br><br>
         <div style="float: right;margin-right: 20px;"><img src="images/twitter.png">&nbsp;<img src="images/facebook.png"><br>call:+250780131021</div>
 
