--- a/index.htm
+++ b/index.htm
@@ -226,7 +226,7 @@ $(document).ready(function(e) {
             <div class="f-right right main">
                 <nav>
                 	<ul class="contensed">
-                    	<li><a href="default.htm" class="active">Home</a></li>
+                    	<li><a href="index.htm" class="active">Home</a></li>
                         <li><a href="#About">About Us</a>
                         </li>
                         <li><a href="">Offering</a>
@@ -454,7 +454,7 @@ $(document).ready(function(e) {
        <div class="header menu-out"><a title="" href=""><img class="exp-icon" alt="" src="images/mobil-menu.png" /></a></div>
          <div class="content">
            <ul>
-		    <li><a href="default.htm" class="active">Home</a></li>
+		    <li><a href="index.htm" class="active">Home</a></li>
             <li><a href="about-us.htm" >About Us</a>
 				<div class="header menu-out out-child"><i class="fa fa-arrow-down" aria-hidden="true"></i></div>
 				<div class="content">
@@ -722,7 +722,7 @@ $(document).ready(function(e) {
                                         <h3 class="contensed" style="margin-bottom:8px;">Jewelry</h3>
                                         <p>Our solutions are being used as a direct business generating source and as a strategic marketing & product showcase tool...</p><br>
                                         <a href="jewelry.htm" class="btn">read more</a>
-                                  
+                                      <h1></h1>
                                     </li>                                    
                                 </ul>
                            	 </div>
@@ -809,7 +809,7 @@ $(document).ready(function(e) {
       <div id="footer">
    		<div id="footer-inner" class="set-width">
         	<div id="footer-menu">
-                  <a href="default.htm" class="footer-menu-link">Home</a> |   
+                  <a href="index.htm" class="footer-menu-link">Home</a> |   
                   <a href="about-us.htm" class="footer-menu-link">About us</a> | 
                   <a href="web-app-development.htm" class="footer-menu-link">Offering</a> |   
                   <a href="optical-industry.htm" class="footer-menu-link">Industry verticals</a> |   
@@ -913,7 +913,7 @@ $(document).ready(function(e) {
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul id="resp-menu" class="nav navbar-nav">
-            <li class="active"><a href="default.htm">Home <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="index.htm">Home <span class="sr-only">(current)</span></a></li>
             <li class="dropdown"><a href="about-us.htm">About Us</a><a href="#"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
            		<ul class="dropdown-menu">
 					<li><a href="our-team.htm"> Our Team </a><li>
