--- a/index.htm
+++ b/index.htm
@@ -198,7 +198,9 @@ $(document).ready(function(e) {
 
 
 <div id="main-container" class=" hidden-sm hidden-xs">
-    <header style="width:100%; background:#015077;padding: 5px;"> &nbsp;&nbsp;  <div style="float: right;margin-right: 5px;"> </div>
+    <header style="width:100%; background:#015077;padding: 5px;"> &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div style="float: right;margin-right: 30px;"> <img src="images/twitter.png">&nbsp;<img src="images/facebook.png">Keep In Touch
+        KIGALI,RWANDA
+        Tel:+250 783 250 033 +250780131021 +250 727 923 756</div>
     </header>
     <div class="wrap" style="background: white;color: #000000;">
         <br><br>
@@ -231,7 +233,7 @@ $(document).ready(function(e) {
                         <li><a href="#About">About Us</a>
                         </li>
                         <li><a href="">Offering</a>
-                        	<ul class="roomPop othersPop" style="background:rgb(247, 243, 243);margin-left:40px;width: 100px;height: 10px;float: center;">
+                        	<ul>
                                 <div id="modal-container">
                                     <div class="modal-background" style="width: fit-content;width: 100px;">
                                       <div class="modal" style="color: red;">
@@ -323,7 +325,7 @@ $(document).ready(function(e) {
                                     <li style="background:none;">
                                         <ul>
                                             
-                                            <a href="e-learning.htm" class="linktext"><cent><Strong>E-visitors</Strong> </cent></a><br>
+                                            <a href="index.htm" class="linktext"><cent><Strong>E-visitors</Strong> </cent></a><br>
 
                                            <img src="images/san.png" width="300px">
                                         </ul>
@@ -357,7 +359,7 @@ $(document).ready(function(e) {
                             </ul>
                         </li>
                         <li><a href="#">Solutions</a>
-                        	<ul class="roomPop othersPop" style=" height:275px;background: rgb(233, 231, 231);">
+                        	<ul class="roomPop othersPop" style=" height:400px;background: rgb(233, 231, 231);">
                                 <h2 style="color:#1bafe6; padding:0 0 0 20px;">Solutions</h2>
                                 
                                     <li style="background:none;">
@@ -411,32 +413,32 @@ $(document).ready(function(e) {
          <div class="content">
            <ul>
 		    <li><a href="index.htm" class="active">Home</a></li>
-            <li><a href="about-us.htm" >About Us</a>
+            <li><a href="index.htm" >About Us</a>
 				<div class="header menu-out out-child"><i class="fa fa-arrow-down" aria-hidden="true"></i></div>
 				<div class="content">
 				   <ul>
-					<li><a href="our-team.htm" class="linktext"> Our Team </a></li>
-					<li><a href="technical-alliance.htm" class="linktext"> Technical Alliance</a></li>
-					<li><a href="business-alliance.htm" class="linktext"> Business Alliance</a></li>
-					<li><a href="infrastructure.htm" class="linktext"> Infrastructure</a></li>
-					<li><a href="https://santechrwanda.com/about.php" target="_blank" class="linktext"> Events</a></li>
-					<li><a href="https://santechrwanda.com/about.php" target="_blank" class="linktext"> Events</a></li>
+					<li><a href="index.html" class="linktext"> Our Team </a></li>
+					<li><a href="index.html" class="linktext"> Technical Alliance</a></li>
+					<li><a href="index.htm" class="linktext"> Business Alliance</a></li>
+					<li><a href="index.htm" class="linktext"> Infrastructure</a></li>
+					<li><a href="index.htm" target="_blank" class="linktext"> Events</a></li>
+					<li><a href="index.htm" target="_blank" class="linktext"> Events</a></li>
 				  </ul>
 				</div>
 			</li>
-			<li><a href="web-app-development.htm">Offering</a>
+			<li><a href="index.htm">Offering</a>
 				<div class="header menu-out out-child"><i class="fa fa-arrow-down" aria-hidden="true"></i></div>
 				<div class="content">
 				   <ul>
-					<li><a href="web-app-development.htm" class="linktext"> Web App Development </a></li>
-					<li><a href="software-app-development.htm" class="linktext">Software Development</a></li>
-					<li><a href="offshore-development.htm" class="linktext"> Offshore Development</a></li>
-					<li><a href="infrastructure.htm" class="linktext"> Infrastructure</a></li>
-					<li><a href="https://santechrwanda.com/about.php" target="_blank" class="linktext"> Digital Marketing</a></li>
+					<li><a href="index.htm" class="linktext"> Web App Development </a></li>
+					<li><a href="index.htm" class="linktext">Software Development</a></li>
+					<li><a href="index.htm" class="linktext"> Offshore Development</a></li>
+					<li><a href="index.htm" class="linktext"> Infrastructure</a></li>
+					<li><a href="index.htm" target="_blank" class="linktext"> Digital Marketing</a></li>
 				  </ul>
 				</div>
 			</li>
-			<li><a href="optical-industry.htm">Industry verticals</a>
+			<li><a href="index.htm">Industry verticals</a>
 				<div class="header menu-out out-child"><i class="fa fa-arrow-down" aria-hidden="true"></i></div>
 				<div class="content">
 				   <ul>
@@ -459,12 +461,12 @@ $(document).ready(function(e) {
 				<div class="header menu-out out-child"><i class="fa fa-arrow-down" aria-hidden="true"></i></div>
 				<div class="content">
 				   <ul>
-                      <li><a href="office-intranet.htm" class="linktext"> Office Intranet</a></li>
-                      <li><a href="crm-software.htm" class="linktext"> CRM Software</a></li>
-                      <li><a href="secondary-sales-automation.htm" class="linktext"> Secondary Sales Automation</a></li>
-                      <li><a href="distribution-management-software.htm" class="linktext"> Distribution Management Software </a></li>
-                      <li><a href="order-processing-management.htm" class="linktext"> Order Processing & Management </a></li>
-                      <li><a href="quotation-generation-programs.htm" class="linktext"> Quotation Generation Program</a></li>
+                      <li><a href="index.htm" class="linktext"> Office Intranet</a></li>
+                      <li><a href="index.htm" class="linktext"> CRM Software</a></li>
+                      <li><a href="index.htm" class="linktext"> Secondary Sales Automation</a></li>
+                      <li><a href="index.htm" class="linktext"> Distribution Management Software </a></li>
+                      <li><a href="index.htm" class="linktext"> Order Processing & Management </a></li>
+                      <li><a href="index.htm" class="linktext"> Quotation Generation Program</a></li>
                       <li><a href="customer-loyalty.htm" class="linktext"> Customer Loyalty</a></li>
                       <li><a href="ecoupon-software.htm" class="linktext"> eCoupon Software</a></li>
                       <li><a href="partner-enhancement-programs.htm" class="linktext"> Partner Enhancement Program</a></li>
