--- a/index.htm
+++ b/index.htm
@@ -515,7 +515,7 @@ $(document).ready(function(e) {
 				</div>
 			</li>
 			<li><a href="contact-us.htm">Contact us</a></li>
-            <li><a href="enquiry.aspx">Enquiry</a></li>
+            <li><a href="">Enquiry</a></li>
           </ul>
          </div>
  </div>
@@ -810,7 +810,7 @@ $(document).ready(function(e) {
                   <a href="contact-us.htm" class="footer-menu-link">Contact us</a> | 
                   <a href="https://santechrwanda.com/" target="_blank" class="footer-menu-link">Blog</a> |   
                   <a href="https://santechrwanda.com/" target="_blank" class="footer-menu-link">Support</a> |
-                  <a href="enquiry.aspx" class="footer-menu-link">Enquiry</a>
+                  <a href="" class="footer-menu-link">Enquiry</a>
                   <p>&nbsp;&nbsp;© 2020, SANT TECH  Ltd . All rights reserved.</p>
         	</div>
           	<div class="footer-menu-social">Socialise with us<br>
@@ -959,7 +959,7 @@ $(document).ready(function(e) {
               </ul>
             </li>
 			<li><a href="contact-us.htm">Contact us</a></li>
-			<li><a href="enquiry.aspx">Enquiry</a></li>
+			<li><a href="">Enquiry</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
