--- a/index.htm
+++ b/index.htm
@@ -452,7 +452,7 @@ $(document).ready(function(e) {
 				<div class="header menu-out out-child"><i class="fa fa-arrow-down" aria-hidden="true"></i></div>
 				<div class="content">
 				   <ul>
-					<li><a href="index.html" class="linktext"> Our Team </a></li>
+					<!-- <li><a href="index.html" class="linktext"> Our Team </a></li> -->
 					<li><a href="index.html" class="linktext"> Technical Alliance</a></li>
 					<li><a href="index.htm" class="linktext"> Business Alliance</a></li>
 					<li><a href="index.htm" class="linktext"> Infrastructure</a></li>
