--- a/index.htm
+++ b/index.htm
@@ -435,7 +435,7 @@ $(document).ready(function(e) {
                             </ul>
                         </li>
                         <li><a href="contact-us.htm">Contact us</a></li>
-                        <li><a href="">Enquiry</a></li>
+                        <li><a href="index.htm">Enquiry</a></li>
                     </ul>
                 </nav>	
             </div>
@@ -515,7 +515,7 @@ $(document).ready(function(e) {
 				</div>
 			</li>
 			<li><a href="contact-us.htm">Contact us</a></li>
-            <li><a href="">Enquiry</a></li>
+            <li><a href="index.htm">Enquiry</a></li>
           </ul>
          </div>
  </div>
@@ -811,7 +811,7 @@ $(document).ready(function(e) {
                   <a href="index.htm" class="footer-menu-link">Contact us</a> | 
                   <a href="https://santechrwanda.com/" target="_blank" class="footer-menu-link">Blog</a> |   
                   <a href="https://santechrwanda.com/" target="_blank" class="footer-menu-link">Support</a> |
-                  <a href="" class="footer-menu-link">Enquiry</a>
+                  <a href="index.htm" class="footer-menu-link">Enquiry</a>
                   <p>&nbsp;&nbsp;© 2020, SANT TECH  Ltd . All rights reserved.</p>
         	</div>
           	<div class="footer-menu-social">Socialise with us<br>
@@ -960,7 +960,7 @@ $(document).ready(function(e) {
               </ul>
             </li>
 			<li><a href="index.htm">Contact us</a></li>
-			<li><a href="">Enquiry</a></li>
+			<li><a href="index.htm">Enquiry</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
