--- a/index.htm
+++ b/index.htm
@@ -837,7 +837,9 @@ $(document).ready(function(e) {
               <a href="index.htm" class="box-sub-title">Enterprise Portal App Development</a><br>
               <a href="index.htm" class="box-sub-title">Business Applications</a><br>
             </div>
-            
+            <div>
+                
+            </div>
             <div id="site-box">
               <a href="index.htm" class="box-title contensed">Software Development </a><br>
    		      <a href="index.htm" class="box-sub-title">Custom Software Development</a><br>
