--- a/index.htm
+++ b/index.htm
@@ -204,7 +204,7 @@ $(document).ready(function(e) {
     </header>
     <div class="wrap" style="background: white;color: #000000;">
         <br><br>
-        <div style="float: right;margin-right: 10px;font-size: 20px;"><marquee scrolldelay="500" direction="up"><img src="images/edge.png" width="70" height="50">&nbsp;<strong>Client satisfaction is our pride!!</strong></marquee></div>
+        <div style="float: right;margin-right: 10px;font-size: 20px;"><marquee scrolldelay="500" direction="up"><img src="images/edge.png" width="70" height="50">&nbsp;<strong>lient satisfaction is our pride!!</strong></marquee></div>
 
         <div itemscope itemtype="http://schema.org/Organization">
            &nbsp; <a title="" href=""><img itemprop="logo" src="images/arokia-it.png" class="img-responsive" alt="" style="margin-top: 10px;"></a>
@@ -838,7 +838,7 @@ $(document).ready(function(e) {
               <a href="index.htm" class="box-sub-title">Business Applications</a><br>
             </div>
             <div>
-                
+
             </div>
             <div id="site-box">
               <a href="index.htm" class="box-title contensed">Software Development </a><br>
