--- a/index.htm
+++ b/index.htm
@@ -216,7 +216,7 @@ $(document).ready(function(e) {
                 <div id="livesearch"></div>
                 <button type="submit">Go</button>
               </form>
-              
+              <div></div>
               <!-- <p style="color: red;">Dribbble Rebound of <a target="_blank" href="http://dribbble.com/shots/843289-Search-Bar?list=tags&tag=ui">Search Bar</a> by <a target="_blank" href="http://dribbble.com/craftyliang">Liang Shi</a></p> -->
                
         </div>
